gcc/testsuite/rust.test/xfail_compile/array_empty_list.rs
// { dg-error "unable to determine type" "" { target { *-*-* } } 0 }
fn main() {
    let arr = [];
}
